# SHA-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
include/SHA256/: SHA256.hpp  hash256.hpp  sha256.hpp
include/SHA512/: sha512.hpp
src/: CMakeLists.txt  SHA256.cpp  hash256.cpp  sha256.cpp
src/SHA256/: CMakeLists.txt
src/SHA512/: CMakeLists.txt  sha512.cpp
test/: CMakeLists.txt  test.cpp
